first working version

--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -3,13 +3,16 @@
 <span class="user">
   <%= link_to feed_item.user.name, feed_item.user %>
 </span>
-<span class="content"><%= feed_item.content %></span>
+<div class="summay">
+<h3 class="title"><%= link_to feed_item.title, post_path(feed_item)  %></h3>
 <span class="timestamp">
   Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
 </span>
+</div>
 <% if current_user?(feed_item.user) %>
   <%= link_to "delete", feed_item, method:  :delete,
     confirm: "You sure?",
-    title:   feed_item.content %>
+    title:   feed_item.title %>
+  <%= link_to "edit", edit_post_path(feed_item) %>
 <% end %>
 </li>
