--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -213,3 +213,38 @@ aside {
     margin-bottom: 5px;
   }
 }
+
+.posts {
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+
+.summary {
+  width:550px;
+  float: left;
+
+  h3{
+    display: block;
+    font-weight: bold;
+    font-size: 130%;
+    margin-bottom: 5px;
+    line-height: 1.3;
+    font-family: Trebuchet MS,Liberation Sans,DejaVu Sans,sans-serif;
+  }
+  a {
+    color: #07c;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  a:visited {
+    color: #4a6b82;
+  }
+  a:hover{
+    text-decoration: underline;
+  }
+}
