--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,21 @@
 <% provide(:title, @user.name) %>
 <div class="row">
-  <aside class="span4">
+  <aside class="span3">
   <section>
   <h1>
     <%= gravatar_for @user %>
     <%= @user.name %>
   </h1>
   </section>
+  <%= link_to "New Post", new_post_path %>
   </aside>
-  <div class="span8">
-    <% if @user.microposts.any? %>
-      <h3>Microposts (<%= @user.microposts.count %>)</h3>
-      <ol class="microposts">
-        <%= render @microposts %>
+  <div class="span9">
+    <% if @user.posts.any? %>
+      <h3>Posts (<%= @user.posts.count %>)</h3>
+      <ol class="posts">
+        <%= render @posts %>
       </ol>
-      <%= will_paginate @microposts %>
+      <%= will_paginate @posts %>
     <% end %>
   </div>
 </div>
