--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,9 @@
 <footer class="footer">
 <small>
-  <a href="http://railstutorial.org/">Rails Tutorial</a>
-  by Michael Hartl
+  by kyk
 </small>
 <nav>
 <ul>
-  <li><%= link_to "About",   '#' %></li>
-  <li><%= link_to "Contact", '#' %></li>
-  <li><a href="http://news.railstutorial.org/">News</a></li>
 </ul>
 </nav>
 </footer>
