--- a/app/views/layouts/posts.html.erb
+++ b/app/views/layouts/posts.html.erb
@@ -14,15 +14,14 @@
         <div class="alert alert-<%= key %>"><%= value %></div>
       <% end %>
       <div class="row">
-      <aside class="span3">
-      <section>
-      <%= render 'shared/user_info' %>
-      </section>
-      <section>
-      <%= link_to "New Post", new_post_path %>
-      </aside>
-      <%= yield %>
-    </div>
+        <aside class="span3">
+        <section>
+        <% if @post.user.nil? then user = current_user else user = @post.user end %>
+        <%= render 'shared/user_info', user: user %>
+        </section>
+        </aside>
+        <%= yield %>
+      </div>
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
