--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= render 'layouts/shim' %>
+    <%= render 'layouts/google_analytics' %>
   </head>
   <body>
     <%= render 'layouts/header' %>
@@ -18,4 +19,5 @@
       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
+  <%= render 'layouts/script' %>
 </html>
